--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ a:hover {
 }
 
 #experience {
-  padding: 300px 0px;
+  padding: 100px 0px;
   background-color: white;
   width: 100%;
 }
@@ -158,6 +158,33 @@ a:hover {
   display: flex;
   gap: 20px;
 }
-ul {
+#footer ul {
   list-style: none;
+}
+
+#experience {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  align-items: center;
+}
+
+.experience-container {
+  padding: 20px;
+  width: 800px;
+  border: solid black;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.logo-title {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.explogo {
+  height: 80px;
+  width: auto;
 }
