--- a/style.css
+++ b/style.css
@@ -94,6 +94,19 @@ body {
   font-size: 25px; /* Darker navy blue for header */
 }
 
+
+@media (max-width: 600px) {
+  #header {
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 600px) {
+  .headeritem {
+    display: none !important;
+  }
+}
+
 a {
   text-decoration: none;
   color: #0f2942;
@@ -168,6 +181,18 @@ a {
   padding-bottom: 10px;
   color: #4b5563; 
   font-weight: 400;
+}
+
+@media (max-width: 600px) {
+  .biotitle {
+    font-size: 25px;
+  }
+}
+
+@media (max-width: 600px) {
+  .biodescription {
+    font-size: 20px;
+  }
 }
 
 #experiences {
